ARGUS-32839 Add support for abort() in ServiceMessageHandler and ServiceMessageClient